--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "node-fetch": "^3.2.1"
+    "knex": "^2.4.2",
+    "node-fetch": "^3.2.1",
+    "pg": "^8.9.0"
   }
 }
