--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "knex": "^2.4.2",
     "node-fetch": "^3.2.1",
-    "pg": "^8.9.0"
+    "pg": "^8.9.0",
+    "postgresql": "^0.0.1"
   }
 }
