--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "trivia-api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +17,14 @@
     "node-fetch": "^3.2.1",
     "pg": "^8.9.0",
     "postgresql": "^0.0.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KarrarQ/trivia-api.git"
+  },
+  "bugs": {
+    "url": "https://github.com/KarrarQ/trivia-api/issues"
+  },
+  "homepage": "https://github.com/KarrarQ/trivia-api#readme",
+  "description": ""
 }
